# infrakitchen

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  flake.nix  index.html  mkdocs.yml  sitemap.xml
server/: .env  .env_local.tmpl  .gitignore  README.md  dev_server.py  generate_encryption_key.py  pyproject.toml  pyrightconfig.json
server/src/: alembic.ini  app.py  scheduler.py  worker.py
server/src/alembic/: env.py
server/src/alembic/versions/: 0282793ee951_add_blueprint_and_workflows.py  0cce847bb91d_add_more_variable_types.py  12060c301304_add_blueprint_and_workflows.py  1de126f86fe4_add_code_snapshot.py  1fc69e42be13_add_personal_tokens.py  2a21f0adafc4_migrate_types.py  32bfeac67778_add_blueprint_and_workflows.py  3395f990627f_add_project.py  35c9875e3ce3_add_template_advanced_documentation.py  38138db5d62b_add_secrets.py  3e31964a93d7_fix.py  47ed1fcc374f_init.py  48a209f9d7af_change_schema_for_workflow.py  4edc339e533f_add_revision_to_audit_logs.py  4fa2cb8495ad_add_blueprint_and_workflows.py  51993b54e07b_change_schema.py  54101e3a8c07_add_notifications.py  55a4914f255c_add_config_template_reference.py  58834976a0ba_add_user_metadata_field.py  5e93f15e9ca6_add_blueprint_and_workflows.py  68808bd7a046_worker_tasks.py  6a3ed2c3aa2b_change_logs_and_audit_schema.py  6f73b5194d89_fix_timestamp_timezone.py  6fa729b28583_add_blueprint_and_workflows.py  7e5c1d7f9f1c_add_validation_rules_tables.py  80f444d5da6b_add_blueprint_and_workflows.py  8a4038807e71_change_logs_and_audit_schema.py  8e59b5d1ec1a_add_validation_rules_tables.py  937b6a3f2c28_add_validation_rules_table.py  a94fd5a63385_template_configuration.py  ad3babc0a5c4_add_blueprint_and_workflows.py  b7d24e3f9a11_add_favorites.py  ccab3f034756_add_batch_operations.py  d4d7e73ae19b_add_blueprint_and_workflows.py  f323032ca48e_add_storage_id.py  f6486f2ec823_add_executors.py
server/src/application/: __init__.py  init_app.py  types.py
server/src/application/batch_operations/: __init__.py  api.py  crud.py  dependencies.py  functions.py  model.py  query_options.py  schema.py  service.py
server/src/application/blueprints/: __init__.py  api.py  crud.py  dependencies.py  functions.py  model.py  query_options.py  schema.py  service.py
server/src/application/common/: __init__.py  schema.py
server/src/application/executors/: __init__.py  api.py  crud.py  dependencies.py  functions.py  model.py  query_options.py  schema.py  service.py  task.py
server/src/application/favorites/: __init__.py  api.py  crud.py  dependencies.py  model.py  schema.py  service.py
server/src/application/integrations/: __init__.py  api.py  crud.py  dependencies.py  functions.py  model.py  query_options.py  schema.py  service.py
server/src/application/logger/: __init__.py  custom_logger.py  uvicorn_logging.json
server/src/application/oidc/: __init__.py  router.py
server/src/application/projects/: __init__.py  crud.py  dependencies.py  functions.py  model.py  query_options.py  schema.py  service.py
server/src/application/providers/: __init__.py  vault_provider.py
server/src/application/resource_temp_state/: api.py  crud.py  dependencies.py  handler.py  model.py  schema.py  service.py
server/src/application/resources/: __init__.py  api.py  cascade_destroy_service.py  crud.py  dependencies.py  functions.py  model.py  query_options.py  schema.py  service.py  task.py
server/src/application/secrets/: __init__.py  api.py  crud.py  dependencies.py  functions.py  model.py  query_options.py  schema.py  service.py
server/src/application/source_code_versions/: __init__.py  api.py  crud.py  dependencies.py  functions.py  model.py  query_options.py  schema.py  service.py  task.py
server/src/application/source_codes/: __init__.py  api.py  crud.py  dependencies.py  functions.py  model.py  query_options.py  schema.py  service.py  task.py
server/src/application/storages/: __init__.py  api.py  crud.py  dependencies.py  functions.py  model.py  query_options.py  schema.py  service.py  task.py
server/src/application/templates/: __init__.py  api.py  crud.py  dependencies.py  (+5 more)
server/src/core/: __init__.py  base_models.py  base_worker.py  config.py  custom_entity_log_controller.py  custom_notification_controller.py  database.py  dependencies.py  errors.py  event_stream_manager.py  rabbitmq.py  singleton_meta.py
server/src/fixtures/: auth_providers.py  batch_operations.py  executors.py  generate_entities.py  insert_secrets.py  integrations.py  logs.py  projects.py  resources.py  roles.py  source_code.py  source_code_and_version.py  storages.py  templates.py  users.py  utils.py  validation_rules.py  workspaces.py
server/src/graphql_api/: context.py  endpoint.py  error_handling.py  extensions.py  helpers.py  locked_session.py  schema.py
server/src/infrakitchen_mcp/: __init__.py  client.py  context.py  dispatch_framework.py  docs_tools.py  graphql_tools.py  provider.py  registry.py  rest_tools.py  server.py  tools.py  transforms.py  utils.py
server/tests/: conftest.py  setup_test_environment.py
server/tests/fixtures/: test_auth_provider_fixtures.py  test_batch_operation_fixtures.py  test_blueprint_fixtures.py  test_casbin_fixtures.py  test_entity_logger_fixtures.py  test_entity_tasks_fixtures.py  test_executor_fixtures.py  test_favorites_fixtures.py  test_handlers_fixtures.py  test_integration_fixtures.py  test_notification_fixtures.py  test_permission_fixtures.py  test_project_fixtures.py  test_resource_fixtures.py  test_resource_temp_state_fixtures.py  test_secret_fixtures.py  test_source_code_fixtures.py  test_source_code_version_fixtures.py  test_storage_fixtures.py  test_task_worker_fixutres.py  test_template_fixtures.py  test_tools_fixtures.py  test_user_fixtures.py  test_workflow_fixtures.py  test_workspace_fixtures.py
server/tests/graphql_api/: conftest.py  test_error_handling.py
server/tests/infrakitchen_mcp/: test_auth_middleware.py  test_docs_tools.py  test_graphql_tools.py  test_mcp.py  test_rest_tools.py  test_transforms.py
server/tests/mcp/: conftest.py  test_api_client.py  test_docs.py  test_tools.py
(+1311 files in other folders)
