[tool.pytest.ini_options]
asyncio_mode = "auto"
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "B", "Q", "UP"]
extend-select = ["T201", "E501"]
ignore = []
flake8-bugbear.extend-immutable-calls = [
  "Depends",
  "fastapi.Depends",
  "Security",
  "fastapi.Security",
  "fastapi.Body",
  "fastapi.security.HTTPBearer",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.black]
line-length = 120

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.extend-per-file-ignores]
"src/**/test_*.py" = ["F811"]
"src/**/*_test.py" = ["F811"]

[project.scripts]

[tool.mypy]
plugins = ["pydantic.mypy"]

[project]
name = "infrakitchen"
version = "0.0.1"
description = "Infrastructure provisioning service"
authors = [{ name = "SRE team", email = "sre@electrolux.com" }]
dependencies = [
  "python-dotenv>=1.2.2",
  "fastapi>=0.139.0",
  "Werkzeug>=3.1.8",
  "pydantic>=2.13.4",
  "uvicorn[standard]>=0.49.0",
  "aio-pika>=9.6.2",
  "python-hcl2>=8.1.2",
  "aiofiles>=25.1.0",
  "httpx>=0.28.1",
  "aioboto3>=15.5.0",
  "xmltodict>=1.0.4",
  "python-lorem>=1.3.0.post3",
  "fastapi-sso>=0.21.1",
  "casbin>=1.43.0",
  "pyjwt>=2.13.0",
  "cryptography>=49.0.0",
  "sqlalchemy[asyncio]>=2.0.51",
  "alembic>=1.18.5",
  "asyncpg>=0.31.0",
  "sqlalchemy-utils>=0.42.1",
  "casbin-async-sqlalchemy-adapter>=1.17.0",
  "pydantic-settings>=2.14.2",
  "apscheduler>=3.11.3",
  "kubernetes-asyncio>=36.1.0",
  "google-cloud-storage>=3.12.0",
  "google-cloud-resource-manager>=1.18.0",
  "google-cloud-secret-manager>=2.29.0",
  "fastmcp>=3.4.2",
  "python-gitlab>=8.4.0",
  "prometheus-fastapi-instrumentator>=8.0.2",
  "prometheus-async>=26.1.0",
  "strawberry-graphql[fastapi]>=0.320.0",
  "strawberry-sqlalchemy-mapper>=0.8.0",
  "jinja2>=3.1.6",
]
requires-python = "==3.14.*"
readme = "README.md"
license = { text = "Apache 2.0" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "pytest>=9.1.1",
  "ruff>=0.15.20",
  "black>=26.5.1",
  "click==8.2.1",                                                                                # hard pin to avoid bug with mkdocs
  "setuptools>=82.0.1",
  "uvicorn>=0.49.0",
  "pytest-asyncio>=1.4.0",
  "watchdog>=6.0.0",
  "types-aiofiles>=25.1.0.20260518",
  "pre-commit>=4.6.0",
  "botocore-stubs>=1.43.14",
  "boto3-stubs[essential]>=1.43.39",
  "basedpyright>=1.39.9",
  "kubernetes_asyncio-stubs @ git+https://github.com/kialo/kubernetes_asyncio-stubs.git@29.0.1",
  "mkdocs-material>=9.7.6",
  "mkdocs-glightbox>=0.5.2",
]
